--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,11 @@ $borderRadius: 0.15em;
     text-align: center;
     perspective: 400px;
     margin: 0 auto;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     *,
     *:before,
     *:after {
